Enum sub_categories_type {
  Attributes
  Abilities
  Benefits
}

Enum categories_type {
  physical
  social
  mental
  talents
  skills
  knowledges
  flaws
  merits
  backgrounds
  virtues // vampire
  disciplines // vampire
  gifts // werewolf
  renown // werewolf
  spheres // mage
  others
}

Table race {
  id uuid [pk]
  edition_id uuid [ref: > edition.id]
  name varchar
  description text
}

Table edition {
  id uuid [pk]
  name varchar
}

Table race_characteristics {
  id uuid [pk]
  value text
  key text
  character_id uuid [ref: > character.id]
}

// Table race_character_fields {
//   id uuid [pk]
//   name text
//   race_id uuid [ref: > race.id]
// }

Table user {
  id uuid [pk]
  name varchar
  email varchar
  hashed_password varchar
  created_at timestamp
}

Table chronicle {
  id uuid [pk]
  title varchar
  description text
  storyteller_id uuid [ref: > user.id]
  created_at timestamp
}

Table character {
  id uuid [pk]
  race_id uuid [ref: > race.id]
  name text
  user_id uuid [ref: > user.id]
  chronicle_id uuid [ref: > chronicle.id]
  // willpower_max int
  // willpower_current int
  bashing int
  lethal int
  aggravated int
  created_at timestamp
}

Table sub_category {
  id uuid [pk]
  type sub_category_type
}

Table category {
  id uuid [pk]
  sub_category_id uuid [ref: > sub_category.id]
  type category_type
}

Table characteristics {
  id uuid [pk]
  category_id uuid [ref: > category.id]
  character_id uuid [ref: > character.id]
  name varchar
  description text
}

Table characteristics_level {
  id uuid [pk]
  character_id uuid [ref: > character.id]
  characteristic_id uuid [ref: > characteristics.id]
  level int
}

Table dynamics_characteristics {
  id uuid [pk]
  name varchar
  description text
  category_id uuid [ref: > category.id]
  character_id uuid [ref: > character.id]
}

Table dynamics_characteristics_level {
  id uuid [pk]
  character_id uuid [ref: > character.id]
  characteristic_id uuid [ref: > dynamics_characteristics.id]
  level int
  used int
}
